<resources>
    <string name="app_name">AndroidPlay</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="error_password">密码不能小于6位</string>
    <string name="error_username">用户名不能为空</string>
    <string name="error_repassword">两次密码不一致</string>
    <string name="register_success">注册成功</string>
    <string name="login_fuccess">登录成功！</string>
</resources>
