<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account.LoginFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        style="@style/toolbarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/login">

        <TextView
            android:textColor="?attr/colorOnSurface"
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="end"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/padding_common"
            android:paddingEnd="@dimen/padding_common"
            android:text="@string/register" />
    </androidx.appcompat.widget.Toolbar>


    <EditText
        android:id="@+id/edt_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:hint="@string/user_name"
        android:maxLines="1"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_user_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <ImageView
        android:id="@+id/iv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:src="@drawable/ic_account"
        app:layout_constraintBottom_toBottomOf="@+id/edt_user_name"
        app:layout_constraintEnd_toStartOf="@+id/edt_user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edt_user_name" />


    <EditText
        android:id="@+id/edt_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/password"
        android:maxLines="1"
        android:layout_marginStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_user_name"
        app:layout_constraintTop_toBottomOf="@+id/edt_user_name" />

    <ImageView
        android:id="@+id/iv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:src="@drawable/ic_lock"
        app:layout_constraintBottom_toBottomOf="@+id/edt_password"
        app:layout_constraintEnd_toStartOf="@+id/edt_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edt_password" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_common"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@id/edt_password"
        app:layout_constraintStart_toStartOf="@id/edt_password"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />


</androidx.constraintlayout.widget.ConstraintLayout>